# Awesome-LLM-Training-Serving

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
.github/workflows/: lint.yml
blogs/sglang/: README.md
rw/code/: model.py  prepare_data.py  train.py
rw/scripts/: train.sh
rw/tests/: test_dataset.py
sft/code/: prepare_data.py  train.py  train_qwen2.py  utils.py
sft/config/: qwen_alpaca.yaml  qwen_alpaca_trainer.yaml  train.yaml  training_args.yaml
sft/scripts/: qwen_alpaca.sh  sft.sh  train.sh
sft/sft_qwen_alpaca/: train.py
tools/: Makefile  README.md
tools/benchmark/: benchmark_utils.py
tools/kernels/: device_properties.py  sm.cu
tools/model_weights/: check_weights.py
tools/request/: README.md  bench_request.py  chat_request.py  curl.sh  req_api_test.py  req_json.py  request.py  simple_request.py
tools/scripts/: README.md  benchmark.sh  server.sh
tools/tokenize/: run.py
tutorial/: README.md  benchmark.sh  utils.py
tutorial/accelerate/: main.py  main_ds.py  run.sh  utils.py
tutorial/csrc/: CMakeLists.txt  Makefile
tutorial/csrc/ext/demo/: CMakeLists.txt
tutorial/cuda_graph/: README.md  main.py
tutorial/data/: dummy_dataset.py
tutorial/ddp/: main.py  run.sh  train.yaml
tutorial/docker/: Dockerfile
tutorial/dp/: main.py
tutorial/ds/: radix_tree.py
tutorial/modules/: parameter.py
tutorial/profile/: overview.py  triton_bench.py
tutorial/tensorrt/: demo.py
tutorial/torch_modules/: parameter.py  rmsnorm.py
tutorial/triton/: dropout.py  layernorm.py  matmul.py  order.py  softmax.py  test_triton.py  (+1 more)
(+95 files in other folders)
